# OPENCV-CMAKE-TEMPLATE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
